<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2E2E"
    tools:context=".ConnectWithUs">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-1785962158595876/2886114951"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutTextHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/quantico"
        android:gravity="center_horizontal"
        android:text="@string/connect_with_us"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/actor"
        android:text="@string/aboutText3"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutTextHeading"
        app:lineHeight="21dp" />

    <TextView
        android:id="@+id/aboutText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/actor"
        android:gravity="start"
        android:text="@string/aboutText8"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutText3" />

    <TextView
        android:id="@+id/aboutText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/actor"
        android:gravity="start"
        android:text="@string/aboutText4"
        android:textColor="#808080"
        android:textSize="13sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutText8" />

    <TextView
        android:id="@+id/aboutText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/actor"
        android:gravity="start"
        android:text="@string/aboutText5"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutText4" />

    <TextView
        android:id="@+id/aboutText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/actor"
        android:gravity="start"
        android:text="@string/aboutText6"
        android:textColor="#808080"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutText5"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/socialMediaLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#2E2E2E"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/aboutText6">

        <ImageButton
            android:id="@+id/instagramButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/instagram"
            android:contentDescription="@string/instagram" />

        <ImageButton
            android:id="@+id/twitterButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/twitter"
            android:contentDescription="@string/twitter" />

    </LinearLayout>

    <TextView
        android:id="@+id/aboutText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/actor"
        android:gravity="center"
        android:text="@string/aboutText7"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/socialMediaLayout" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-1785962158595876/2886114951"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutText7" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-1785962158595876/2886114951"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adViewMiddle" />
    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quantico"
        android:padding="3sp"
        android:text="@string/copyrightText"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quantico"
        android:padding="3sp"
        android:text="@string/omniConverter_year"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SmallSp" />


</androidx.constraintlayout.widget.ConstraintLayout>